Modifies CSS and HTML file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <div class="complete"><div class="last"><div class="second-last"><h3 class="alert">Call to action! It's time</h3>
     <div class="signup">Sign up for our product by clicking that button right over there!</div></div>
     <button class="end">Sign up</button></div></div>
-    <div class="footer">Copywrite <span class="dec"> c </span> Saswat Hota 2022</div>
+    <div class="footer">Copywrite &copy Saswat Hota 2022</div>
 </body>
 </html>
