Modifies CSS file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <div class="header-02">   
           <div class="header-03"><h1 class="main-text">This Website is Awesome</h1>
           <div class="auxillary">This website has some subtext that goes here under the main text.It is a smaller font and the color is lower contrast</div>
-          <button>Sign up</button></div>
+          <button class="log">Sign up</button></div>
           <div class="image"><img src="#" alt="This is a placeholder for an image"></div>
      </div> 
   </div> 
